--- a/src/styles/Login.module.css
+++ b/src/styles/Login.module.css
@@ -46,16 +46,18 @@ p {
   display: block;
   margin-bottom: 5px;
   color: var(--text-dark);
-  font-weight: 600;
+  font-weight: bold;
   font-size: 0.9rem;
 }
 
 .input-group input {
   width: 100%;
-  padding: 10px;
+  padding: var(--text-dark);
   border: 1px solid #ddd;
   border-radius: var(--border-radius);
   font-size: 1rem;
+  color: #333;
+
 }
 
 .input-group input:focus {
@@ -66,10 +68,10 @@ p {
 .forgot-password {
   display: block;
   text-align: left;
-  margin-bottom: 20px;
+  margin-bottom: 10px;
   color: var(--primary-color);
   text-decoration: underline;
-  font-size: 0.85rem;
+  font-size: 0.9rem;
   cursor: pointer;
 }
 
@@ -78,16 +80,15 @@ p {
 }
 
 .login-button {
-  width: 100%;
-  padding: 12px;
   background-color: var(--primary-color);
   color: var(--white);
   border: none;
+  padding: 12px 20px;
   border-radius: var(--border-radius);
-  font-size: 1.1rem;
   cursor: pointer;
-  font-weight: 600;
-  transition: background-color 0.3s ease;
+  font-size: 1.1rem;
+  font-weight: bold;
+  width: 100%;
 }
 
 .login-button:hover {
@@ -101,7 +102,14 @@ p {
 
 .error {
   color: var(--danger-color);
-  font-size: 0.9rem;
+  font-size: 14px;
   margin-bottom: 10px;
-  font-weight: 600;
+  font-weight: bold;
+}
+
+.success-color {
+  color: var(--warning-color);
+  font-size: 14px;
+  margin-bottom: 10px;
+  font-weight: bold;
 }
